added side menu and added breadcrumb

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,30 +10,29 @@ body,
   font-family: "Source Sans Pro", sans-serif;
 }
 .content{
-  width: 90%;
-  margin: 0 auto;
+  padding: 20px
 }
 
-/* .app {
+.app {
   display: flex;
   position: relative;
-} */
+} 
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px;
-} */
+}
 
 /* Track */
-/* ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: #e0e0e0;
-} */
+}
 
 /* Handle */
-/* ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: #888;
-} */
+}
 
 /* Handle on hover */
-/* ::-webkit-scrollbar-thumb:hover {
+ ::-webkit-scrollbar-thumb:hover {
   background: #555;
-} */
+}
