--- a/src/components/common/datepicker/customDatePicker.module.css
+++ b/src/components/common/datepicker/customDatePicker.module.css
@@ -1,8 +1,16 @@
 /* Custom styles for the date picker container */
+.container{
+  display: flex;
+  align-items: center;
+}
 .date-picker-container {
   display: flex;
   flex-direction: column;
   font-family: Arial, sans-serif;
+  width: 100%;
+}
+.previousWeek,.nextWeek{
+  margin-top: 10px;
 }
 
 .date-picker-container label {
@@ -21,15 +29,14 @@
 .custom-date-picker {
   width: 100%;
   min-width: 100px;
-  padding: 7px 10px;
+  padding: 9px 10px;
   margin: 0;
   border: 1px solid #ddd;
   border-radius: 4px;
   box-sizing: border-box;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.5;
   outline: none;
-  border: 1px solid rgba(0, 140, 153, 0.5);
   transition: border-color 0.3s;
 }
 
@@ -43,7 +50,7 @@
   /* Adjust the size as needed */
   font-family: "Source Sans Pro", sans-serif;
   /* Change the font family */
-  color: rgb(0, 140, 153);
+
   /* Placeholder text color */
   text-transform: uppercase;
 }
@@ -56,7 +63,7 @@
 }
 
 .react-datepicker .react-datepicker__close-icon::after {
-  background-color: rgb(0, 140, 153) !important;
+  background-color: #008c99 !important;
 }
 
 /* Style for the selected start and end dates */
