--- a/src/components/common/datepicker/customDatePicker.css
+++ b/src/components/common/datepicker/customDatePicker.css
@@ -10,7 +10,7 @@
   width: 100%;
 }
 .previousWeek,.nextWeek{
-  margin-top: 10px;
+  margin-top: 14px;
 }
 
 .date-picker-container label {
@@ -38,33 +38,30 @@
   line-height: 1.5;
   outline: none;
   transition: border-color 0.3s;
+  color: rgb(157, 148, 148);
 }
 
 .custom-date-picker:focus {
   border: 1px solid rgba(0, 140, 153, 0.5);
 }
 
-/* Customizing the placeholder text */
 .custom-date-picker::placeholder {
   font-size: 12px;
-  /* Adjust the size as needed */
   font-family: "Source Sans Pro", sans-serif;
-  /* Change the font family */
 
-  /* Placeholder text color */
   text-transform: uppercase;
 }
 
-/* Adjusting the position of the date picker popup */
 .custom-datepicker-popper {
   z-index: 9999 !important;
   margin-top: 10px;
 
 }
 
-.react-datepicker .react-datepicker__close-icon::after {
+.react-datepicker__close-icon:after {
   background-color: #008c99 !important;
 }
+
 
 /* Style for the selected start and end dates */
 .react-datepicker__day--selected,
