--- a/src/components/venues/InspectorCell.css
+++ b/src/components/venues/InspectorCell.css
@@ -1,6 +1,5 @@
 .inspector-cell-container {
     position: relative;
-    width: 100%;
     display: flex;
     align-items: center;
   }
@@ -10,7 +9,7 @@
     flex: 1;
     display: flex;
     gap: 10px;
-    max-width: 300px;
+    width: 150px;
     margin-right: 30px;
   }
   
