--- a/src/components/venues/InspectorCell.css
+++ b/src/components/venues/InspectorCell.css
@@ -11,6 +11,8 @@
     gap: 10px;
     width: 150px;
     margin-right: 30px;
+    text-align: center;
+    justify-content: center;
   }
   
   .scroll-container::-webkit-scrollbar {
