--- a/src/components/venues/InspectorCell.css
+++ b/src/components/venues/InspectorCell.css
@@ -2,6 +2,8 @@
     position: relative;
     display: flex;
     align-items: center;
+    width: 90%;
+    margin: 0 auto;
   }
   
   .scroll-container {
@@ -12,7 +14,7 @@
     width: 150px;
     margin-right: 30px;
     text-align: center;
-    justify-content: center;
+    /* justify-content: center; */
   }
   
   .scroll-container::-webkit-scrollbar {
