--- a/src/components/venues/InspectorCell.css
+++ b/src/components/venues/InspectorCell.css
@@ -1,36 +1,47 @@
 .inspector-cell-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 90%;
-    margin: 0 auto;
-  }
-  
-  .scroll-container {
-    overflow: auto;
-    flex: 1;
-    display: flex;
-    gap: 10px;
-    width: 170px;
-    margin-right: 30px;
-    text-align: center;
-    /* justify-content: center; */
-  }
-  
-  .scroll-container::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
-  }
-  
-  .scroll-container {
-    -ms-overflow-style: none; /* for Internet Explorer and Edge */
-    scrollbar-width: none; /* for Firefox */
-  }
-  
-  .add-inspector-btn {
-    position: absolute;
-    right: 0;
-    top: 15px;
-    transform: translateY(-50%);
-    white-space: nowrap;
-  }
-  
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.scroll-container {
+  overflow: auto;
+  flex: 1;
+  display: flex;
+  gap: 10px;
+  width: 170px;
+  margin-right: 30px;
+  text-align: center;
+  /* justify-content: center; */
+}
+
+.scroll-container::-webkit-scrollbar {
+  display: none;
+  /* for Chrome, Safari, and Opera */
+}
+
+.scroll-container {
+  -ms-overflow-style: none;
+  /* for Internet Explorer and Edge */
+  scrollbar-width: none;
+  /* for Firefox */
+}
+
+.add-inspector-btn {
+  position: absolute;
+  right: 0;
+  top: 15px;
+  transform: translateY(-50%);
+  white-space: nowrap;
+}
+
+.disabled-icon {
+  pointer-events: none;
+  opacity: 0.5;
+  /* Adjust opacity to visually indicate disabled state */
+  color: rgba(0, 0, 0, 0.26) !important;
+  /* This is the disabled color used by MUI for disabled icons */
+  cursor: not-allowed !important;
+}
